--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 # base de datos
 
 # docker
-# MYSQL_HOST=mysql
-# MYSQL_USER=us1
-# MYSQL_PASSWORD=1234
-# MYSQL_ROOT_PASSWORD=1234
-# MYSQL_DATABASE=proyecto_db
-# MYSQL_PORT=3306
-
-# local
-MYSQL_HOST=localhost
-MYSQL_USER=root
+MYSQL_HOST=mysql
+MYSQL_USER=us1
 MYSQL_PASSWORD=1234
+MYSQL_ROOT_PASSWORD=1234
 MYSQL_DATABASE=proyecto_db
 MYSQL_PORT=3306
+
+# local
+# MYSQL_HOST=localhost
+# MYSQL_USER=root
+# MYSQL_PASSWORD=1234
+# MYSQL_DATABASE=proyecto_db
+# MYSQL_PORT=3306
 
 # servidor
 PORT=3000
